# lidar-mapping

./: .gitignore  .tmp_state_dual_overlay.json  ARCHITECTURE_DECISIONS.md  DEVELOPMENT_ROADMAP.md  README.md  STAGE_1_COMPLETE.md  STAGE_2_COMPLETE.md  STAGE_3_COMPLETE.md  STAGE_3_SUMMARY.md  VSLAM_ASSESSMENT.md  calibration.yaml  lidar_net_safe.sh  parse_witmotion.py  print_witmotion.py  pyproject.toml  pytest.ini  requirements.txt  sanity_check_test.py  setup.py  test_baud.py  test_fusion.py  test_live_viewer.py  test_live_vlp16.py
apps/: __init__.py  diagnose_sensors.py  lidar_net_safe.sh  run_rotation_test.py  run_stationary.py
deploy/: README.md  install.sh  lidar-mapping.service
lidar_mapping/: __init__.py
lidar_mapping/cli/: __init__.py  hbx_calibrate.py  hbx_inject.py  hbx_sniff.py  map.py  mount.py  playback.py  record.py
lidar_mapping/config/: __init__.py
lidar_mapping/fusion/: __init__.py  calibration.py  keyframe_selector.py  lidar_frontend.py  loop_closure.py  pose_graph_backend.py  pose_helpers.py  sensor_hub.py  visual_frontend.py
lidar_mapping/io/: __init__.py  playback.py  recorder.py
lidar_mapping/mapping/: __init__.py  imu_preintegrator.py  loop_closure.py  mapper.py
lidar_mapping/observability/: __init__.py  server.py  snapshot.py  state.py
lidar_mapping/processing/: __init__.py  filters.py  fusion.py  point_cloud.py  registration.py
lidar_mapping/sensors/: __init__.py  ahrs.py  camera.py  imu.py  vlp16.py
lidar_mapping/simulation/: __init__.py
lidar_mapping/ui/: __init__.py  dashboard.py
lidar_mapping/utils/: calibration.py  sync.py  transforms.py
lidar_mapping/visualization/: __init__.py  viewer.py
tests/: test_config.py  test_drivers_mocked.py  test_filters_transforms.py  test_fusion.py  test_imu.py  test_imu_preintegrator.py  test_io.py  test_keyframe_selector.py  test_loop_closure.py  test_mapper.py  test_mount_cli.py  test_open3d_integration.py  test_pose_graph.py  test_pose_graph_backend.py  test_simulation.py  test_stage3_integration.py  test_sync_calibration.py  test_ui_session.py  test_visualization.py  test_vlp16.py
