[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-mapping"
version = "0.1.0"
description = "VLP-16 + IMU + Camera fusion mapping and 3D terrain mapping toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "walnut-engineering" }]
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "pyserial>=3.5",
    "scipy>=1.10",
    "vispy>=0.14",
    "glfw>=2.6",
    "Pillow>=10",
    "Flask>=3.0",
    "PyYAML>=6.0",
    "open3d>=0.18; platform_machine != 'aarch64'",
]

[project.optional-dependencies]
i2c = ["smbus2>=0.4"]
imu-i2c = ["smbus2>=0.4"]
imu-serial = ["pyserial>=3.5"]
camera = ["opencv-python>=4.8"]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7"]

[project.scripts]
lidar-record = "lidar_mapping.cli.record:main"
lidar-playback = "lidar_mapping.cli.playback:main"
lidar-map = "lidar_mapping.cli.map:main"
lidar-ui = "lidar_mapping.ui.dashboard:main"
lidar-mount = "lidar_mapping.cli.mount:main"
lidar-hbx-inject = "lidar_mapping.cli.hbx_inject:main"
lidar-hbx-calibrate = "lidar_mapping.cli.hbx_calibrate:main"

[tool.setuptools.packages.find]
include = ["lidar_mapping*"]
